--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/user
 spring.datasource.username=root
-spring.datasource.password=123456789a
+spring.datasource.password=0000
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+
+spring.sql.init.continue-on-error=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
